--- a/static/styles/vcard.css
+++ b/static/styles/vcard.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto');
-
 html {
     font-family: 'Roboto';
 	font-size: 16px;
@@ -260,10 +258,10 @@ a {
 	background-repeat: no-repeat;
 }
 
-
 .paper .left.crop{
-	border-radius:10%;
-	overflow: hidden;
+	height: 260px;
+	width: calc(48% - 64px);
+	margin: 36px calc(1% + 32px);
 }
 
 .paper .right {
@@ -293,7 +291,11 @@ a {
 	font-weight: bold;
 }
 
-/* hover animation */
+@media (min-width: 577px) {
+	.paper .right.free {
+		margin-top: 115px;
+	}
+}
 
 @media (min-width: 953px) {
 	.paper {
@@ -302,6 +304,7 @@ a {
 		margin-top: 16px;
 	}
 
+	/* hover animation */
 	.paper .bottom .info h4 a:hover,
 	.paper .right .info h4 a:hover {
 		margin : -16px;
@@ -492,12 +495,15 @@ h2:nth-child(3) {
 
 @media (max-width: 576px) {
 	.paper .left,
+	.paper .left.crop,
 	.paper .right {
 		width: calc(100% - 32px);
 	}
 
-	.paper .left {
+	.paper .left,
+	.paper .left.crop {
 		margin: 16px;
+		height: 300px;
 	}
 
 	.paper .right {
